--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "y": "^0.3.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1"
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "bootstrap": "^4.5.3"
   }
 }
